file( GLOB SOURCES "*.u" )

foreach( SOURCE ${SOURCES} )
	file( RELATIVE_PATH source_name_rel ${CMAKE_CURRENT_SOURCE_DIR} ${SOURCE} )
	set( BC_FILE ${CMAKE_CURRENT_BINARY_DIR}/${source_name_rel}.bc )
	add_custom_command(
		OUTPUT ${BC_FILE}
		DEPENDS ${SOURCE} Compiler${CURRENT_COMPILER_GENERATION}
		COMMAND
			Compiler${CURRENT_COMPILER_GENERATION} ${SPRACHE_COMPILER_OPT_OPTIONS} ${SPRACHE_COMPILER_PIC_OPTIONS}
			${SOURCE} -o ${BC_FILE} --filetype=bc
		)
	list( APPEND BC_FILES ${BC_FILE} )
endforeach()

set( OBJECT_COMBINED ${CMAKE_CURRENT_BINARY_DIR}/BitcodeLinkingTest.o )
add_custom_command(
	OUTPUT ${OBJECT_COMBINED}
	DEPENDS ${BC_FILES}
	DEPENDS Compiler${CURRENT_COMPILER_GENERATION}
	COMMAND
		Compiler${CURRENT_COMPILER_GENERATION} ${SPRACHE_COMPILER_OPT_OPTIONS} ${SPRACHE_COMPILER_PIC_OPTIONS}
		${BC_FILES} -o ${OBJECT_COMBINED} --input-filetype=bc
	)

add_executable( BitcodeLinkingTest${CURRENT_COMPILER_GENERATION} ../dummy.cpp ${SOURCES} ${OBJECT_COMBINED} )
add_dependencies( BitcodeLinkingTest${CURRENT_COMPILER_GENERATION} Compiler${CURRENT_COMPILER_GENERATION} )
