file( GLOB SOURCES "*.u" )

foreach( SOURCE ${SOURCES} )
	file( RELATIVE_PATH source_name_rel ${CMAKE_CURRENT_SOURCE_DIR} ${SOURCE} )
	set( BC_FILE ${CMAKE_CURRENT_BINARY_DIR}/${source_name_rel}.bc )
	add_custom_command(
		OUTPUT ${BC_FILE}
		DEPENDS ${SOURCE} Compiler${CURRENT_COMPILER_GENERATION}
		COMMAND
			Compiler${CURRENT_COMPILER_GENERATION} ${SPRACHE_COMPILER_OPT_OPTIONS} ${SPRACHE_COMPILER_PIC_OPTIONS}
			${SOURCE} -o ${BC_FILE} --filetype=bc
		)
	list( APPEND BC_FILES ${BC_FILE} )
endforeach()

set( BC_OBJECT_COMBINED ${CMAKE_CURRENT_BINARY_DIR}/BitcodeLinkingTest.o )
add_custom_command(
	OUTPUT ${BC_OBJECT_COMBINED}
	DEPENDS ${BC_FILES}
	DEPENDS Compiler${CURRENT_COMPILER_GENERATION}
	COMMAND
		Compiler${CURRENT_COMPILER_GENERATION} ${SPRACHE_COMPILER_OPT_OPTIONS} ${SPRACHE_COMPILER_PIC_OPTIONS}
		${BC_FILES} -o ${BC_OBJECT_COMBINED} --input-filetype=bc --verify-module
	)

add_executable( BitcodeLinkingTest${CURRENT_COMPILER_GENERATION}  ${SOURCES} ${BC_OBJECT_COMBINED} )
target_link_libraries( BitcodeLinkingTest${CURRENT_COMPILER_GENERATION} PRIVATE CPPDummy )
add_dependencies( BitcodeLinkingTest${CURRENT_COMPILER_GENERATION} Compiler${CURRENT_COMPILER_GENERATION} )

set(LL_FILES)
foreach( SOURCE ${SOURCES} )
	file( RELATIVE_PATH source_name_rel ${CMAKE_CURRENT_SOURCE_DIR} ${SOURCE} )
	set( LL_FILE ${CMAKE_CURRENT_BINARY_DIR}/${source_name_rel}.ll )
	add_custom_command(
		OUTPUT ${LL_FILE}
		DEPENDS ${SOURCE} Compiler${CURRENT_COMPILER_GENERATION}
		COMMAND
			Compiler${CURRENT_COMPILER_GENERATION} ${SPRACHE_COMPILER_OPT_OPTIONS} ${SPRACHE_COMPILER_PIC_OPTIONS}
			${SOURCE} -o ${LL_FILE} --filetype=ll
		)
	list( APPEND LL_FILES ${LL_FILE} )
endforeach()

set( LL_OBJECT_COMBINED ${CMAKE_CURRENT_BINARY_DIR}/LLAssebllyLinkingTest.o )
add_custom_command(
	OUTPUT ${LL_OBJECT_COMBINED}
	DEPENDS ${LL_FILES}
	DEPENDS Compiler${CURRENT_COMPILER_GENERATION}
	COMMAND
		Compiler${CURRENT_COMPILER_GENERATION} ${SPRACHE_COMPILER_OPT_OPTIONS} ${SPRACHE_COMPILER_PIC_OPTIONS}
		${LL_FILES} -o ${LL_OBJECT_COMBINED} --input-filetype=ll --verify-module
	)

add_executable( LLAssebllyLinkingTest${CURRENT_COMPILER_GENERATION} ${SOURCES} ${LL_OBJECT_COMBINED} )
target_link_libraries( LLAssebllyLinkingTest${CURRENT_COMPILER_GENERATION} PRIVATE CPPDummy )
add_dependencies( LLAssebllyLinkingTest${CURRENT_COMPILER_GENERATION} Compiler${CURRENT_COMPILER_GENERATION} )
