set( C_CALLING_CONVENTION_TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/c_calling_convention_test.u )
CompileUSources( "${C_CALLING_CONVENTION_TEST_SOURCES}" C_CALLING_CONVENTION_TEST_OBJECTS )

add_executable( CCallingConventionTest${CURRENT_COMPILER_GENERATION} c_calling_convention_test.cpp ${C_CALLING_CONVENTION_TEST_SOURCES} ${C_CALLING_CONVENTION_TEST_OBJECTS} )
add_dependencies( CCallingConventionTest${CURRENT_COMPILER_GENERATION} Compiler${CURRENT_COMPILER_GENERATION} )

# Run the test
add_custom_command( TARGET CCallingConventionTest${CURRENT_COMPILER_GENERATION} POST_BUILD COMMAND CCallingConventionTest${CURRENT_COMPILER_GENERATION} )
